# data-contracts

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  SCHEMA.md  contributing.md  pyproject.toml
.githooks/: pre-push
.github/: pull_request_template.md
docs/: commit_guidelines.md  design-philosophy.md  design_philosophy.md  development.md  release_checklist.md  review_prompt.md
fixtures/: contract_spec_harness_variants.md
migration/: id_map_runner_split.csv  path_map_data_contracts_to_runner_php.csv  path_map_data_contracts_to_runner_python.csv  path_map_data_contracts_to_runner_rust.csv
scripts/: add_library_chain_exports.py  bundle  check_canonical_contract_model.py  check_contract_governance.py  check_docs_freshness.py  ci_cleanroom.sh  ci_gate.sh  ci_gate_summary.py  ci_verify_runner_entrypoints.sh  codemod_hook_event_terms.py  codemod_unify_class_schema.py  compare_conformance_parity.py  conformance_purpose_report.py  contract-set  contract_assertions_report.py  contract_coverage_report.py  control_plane.sh  convert_cases.py  convert_chain_export_from_key.py  convert_chain_exports_to_list.py  convert_chain_ref_format.py  convert_chain_step_imports_to_exports.py  convert_definitions_to_defines.py  convert_ops_symbol_names.py  convert_spec_lang_yaml_ast.py  convert_std_symbol_names.py  convert_virtual_root_paths.py  core_gate.sh  docs_audience_generate.py  docs_audience_generate.sh  docs_build_reference.py  docs_doctor.sh  docs_generate_all.py  docs_generate_specs.py  docs_graph_export.py  docs_lint.py  docs_operability_report.py  evaluate_style.py  generate_governance_check_catalog.py  generate_harness_type_catalog.py  (+66 more)
spec_runner/: __init__.py  assertion_health.py  assertions.py  cli.py  codecs.py  compiler.py  conformance.py  conformance_fixtures.py  conformance_parity.py  conformance_purpose.py  conformance_purpose_report.py  contract_assertions_report.py  contract_governance.py  dispatcher.py  doc_parser.py  docs_build_reference.py  docs_generate_specs.py  docs_generators.py  docs_inventory.py  docs_operability_report.py  docs_quality.py  external_refs.py  generate_governance_check_catalog.py  generate_metrics_field_catalog.py  generate_policy_rule_catalog.py  generate_runner_api_catalog.py  generate_schema_docs.py  generate_spec_lang_builtin_catalog.py  generate_spec_schema_field_catalog.py  ops_namespace.py  (+30 more)
spec_runner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+2126 files in other folders)
