[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spec-runner"
version = "0.1.0"
description = "Executable spec runner for yaml spec-test blocks in Markdown."
readme = "README.md"
requires-python = ">=3.10"
# Keep this as a string for compatibility with setuptools' PEP 621 validation.
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "jon"}]

dependencies = [
  "PyYAML>=6",
]

[project.urls]
Repository = "https://example.invalid/spec-runner"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "build>=1",
  "twine>=6",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["spec_runner*"]
